--- a/_posts/about/about.html
+++ b/_posts/about/about.html
@@ -1950,11 +1950,12 @@ distill-header .nav a {
 </div>
 
 <div class="d-article">
-<p>This section must bu include a short presentation of you. Hi, I’m Héloïse Plasman, I’m in 2^nd grade in Biology in the Univerty of Mons in Belgium. I aways like Sciences in general since a long time. That’s why I was already studying Sciences in secondary school. I have also had English courses since I was in kinder garden because I was in a immersion school.</p>
+<p>Hi,</p>
+<p>I’m Héloïse Plasman, I’m in second grade in Biology in the Univerty of Mons in Belgium. My English teacher this year is Bénédicte Bouchet, I’m in group 4.</p>
+<p>I aways like Sciences in general since a long time. That’s why I was already studying Sciences in secondary school.</p>
+<p>I have also had English courses since I was in kinder garden because I was in a immersion school.</p>
 <p>Besides studies my big passion is pastry and cooking in general. It helps me destress.</p>
-<ul>
-<li>first name/surname, teacher’s name, class name and academic year My names is Héloïse Plasman and my English teacher is Bénédicte Bouchet, I’m in BAB2 (group 4), 2020-2021</li>
-</ul>
+<p>Academic year 2020-2021</p>
 <!--radix_placeholder_article_footer-->
 <!--/radix_placeholder_article_footer-->
 </div>
