--- a/_posts/2020-10-24-mon-article/mon-article.html
+++ b/_posts/2020-10-24-mon-article/mon-article.html
@@ -41,15 +41,16 @@
   <meta property="twitter:description" content="Analyse of how the AI can help diagnose Alzheimer."/>
   
   <!--/radix_placeholder_meta_tags-->
+  
   <!--radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output"]}},"value":[{"type":"character","attributes":{},"value":["Article 1 : The AI that spots Alzheimer's from cookie drawing"]},{"type":"character","attributes":{},"value":["Analyse of how the AI can help diagnose Alzheimer.\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","url"]}},"value":[{"type":"character","attributes":{},"value":["Plasman Héloïse"]},{"type":"character","attributes":{},"value":["Heloise04.github.io/Heloise_blog/"]}]}]},{"type":"character","attributes":{},"value":["10-24-2020"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[false]}]}]}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","bibliography","output"]}},"value":[{"type":"character","attributes":{},"value":["Article 1 : The AI that spots Alzheimer's from cookie drawing"]},{"type":"character","attributes":{},"value":["Analyse of how the AI can help diagnose Alzheimer.\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","url"]}},"value":[{"type":"character","attributes":{},"value":["Plasman Héloïse"]},{"type":"character","attributes":{},"value":["Heloise04.github.io/Heloise_blog/"]}]}]},{"type":"character","attributes":{},"value":["10-24-2020"]},{"type":"character","attributes":{},"value":["biblio/AI_Alzheimer.bib"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[false]}]}]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"character","attributes":{},"value":["biblio/AI Alzheimer.bib","images/cookietheft.jpg","mon-article_files/bowser-1.9.3/bowser.min.js","mon-article_files/distill-2.2.21/template.v2.js","mon-article_files/jquery-1.11.3/jquery.min.js","mon-article_files/webcomponents-2.0.0/webcomponents.js"]}
+  {"type":"character","attributes":{},"value":["biblio/AI_Alzheimer.bib","images/cookietheft.jpg","mon-article_files/bowser-1.9.3/bowser.min.js","mon-article_files/distill-2.2.21/template.v2.js","mon-article_files/jquery-1.11.3/jquery.min.js","mon-article_files/webcomponents-2.0.0/webcomponents.js"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
   <!--/radix_placeholder_navigation_in_header-->
@@ -1029,6 +1030,17 @@
 <!--/radix_placeholder_site_after_body-->
 <!--radix_placeholder_appendices-->
 <div class="appendix-bottom"></div>
+<script id="distill-bibliography" type="text/bibtex">
+@misc{UniversityofBirmingham,
+abstract = {Researchers have used an innovative approach to identify thousands of antibiotic resistance genes found in bacteria that inhabit the human gut.},
+author = {{University of Birmingham}},
+booktitle = {ScienceDaily},
+title = {{More than 6,000 antibiotic resistance genes discovered in the bacteria that inhabit the human gut.}},
+url = {www.sciencedaily.com/releases/2018/11/181130111626.htm},
+urldate = {25 octoberer 2019},
+year = {2018}
+}
+</script>
 <!--/radix_placeholder_appendices-->
 <!--radix_placeholder_navigation_after_body-->
 <!--/radix_placeholder_navigation_after_body-->
