--- a/_posts/2020-10-24-mon-article/mon-article.html
+++ b/_posts/2020-10-24-mon-article/mon-article.html
@@ -41,11 +41,10 @@
   <meta property="twitter:description" content="Analyse of how the AI can help diagnose Alzheimer."/>
   
   <!--/radix_placeholder_meta_tags-->
-  
   <!--radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","bibliography","output"]}},"value":[{"type":"character","attributes":{},"value":["Article 1 : The AI that spots Alzheimer's from cookie drawing"]},{"type":"character","attributes":{},"value":["Analyse of how the AI can help diagnose Alzheimer.\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","url"]}},"value":[{"type":"character","attributes":{},"value":["Plasman Héloïse"]},{"type":"character","attributes":{},"value":["Heloise04.github.io/Heloise_blog/"]}]}]},{"type":"character","attributes":{},"value":["10-24-2020"]},{"type":"character","attributes":{},"value":["biblio/AI_Alzheimer.bib"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[false]}]}]}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output"]}},"value":[{"type":"character","attributes":{},"value":["Article 1 : The AI that spots Alzheimer's from cookie drawing"]},{"type":"character","attributes":{},"value":["Analyse of how the AI can help diagnose Alzheimer.\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","url"]}},"value":[{"type":"character","attributes":{},"value":["Plasman Héloïse"]},{"type":"character","attributes":{},"value":["Heloise04.github.io/Heloise_blog/"]}]}]},{"type":"character","attributes":{},"value":["10-24-2020"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[false]}]}]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   
@@ -1018,6 +1017,7 @@
 <p>It’s a great thing to found out up to 7 years before developing the disease The AI will not give the diagnosis but will help the doctor</p>
 <h4 id="remaining-questions"><em>Remaining questions</em></h4>
 <p>/</p>
+<h1 id="references">References</h1>
 <!--radix_placeholder_article_footer-->
 <!--/radix_placeholder_article_footer-->
 </div>
@@ -1030,17 +1030,6 @@
 <!--/radix_placeholder_site_after_body-->
 <!--radix_placeholder_appendices-->
 <div class="appendix-bottom"></div>
-<script id="distill-bibliography" type="text/bibtex">
-@misc{UniversityofBirmingham,
-abstract = {Researchers have used an innovative approach to identify thousands of antibiotic resistance genes found in bacteria that inhabit the human gut.},
-author = {{University of Birmingham}},
-booktitle = {ScienceDaily},
-title = {{More than 6,000 antibiotic resistance genes discovered in the bacteria that inhabit the human gut.}},
-url = {www.sciencedaily.com/releases/2018/11/181130111626.htm},
-urldate = {25 octoberer 2019},
-year = {2018}
-}
-</script>
 <!--/radix_placeholder_appendices-->
 <!--radix_placeholder_navigation_after_body-->
 <!--/radix_placeholder_navigation_after_body-->
