--- a/_posts/2020-10-24-mon-article/mon-article.html
+++ b/_posts/2020-10-24-mon-article/mon-article.html
@@ -41,15 +41,17 @@
   <meta property="twitter:description" content="Analyse of how the AI can help diagnose Alzheimer."/>
   
   <!--/radix_placeholder_meta_tags-->
+  
+  <meta name="citation_reference" content="citation_title=The ai that spots alzheimer’s from cookie drawin;citation_publication_date=2020;citation_publisher=BBC News;citation_author=Jane Wakefield"/>
   <!--radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output"]}},"value":[{"type":"character","attributes":{},"value":["Article 1 : The AI that spots Alzheimer's from cookie drawing"]},{"type":"character","attributes":{},"value":["Analyse of how the AI can help diagnose Alzheimer.\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","url"]}},"value":[{"type":"character","attributes":{},"value":["Plasman Héloïse"]},{"type":"character","attributes":{},"value":["Heloise04.github.io/Heloise_blog/"]}]}]},{"type":"character","attributes":{},"value":["10-24-2020"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[false]}]}]}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","bibliography","output"]}},"value":[{"type":"character","attributes":{},"value":["Article 1 : The AI that spots Alzheimer's from cookie drawing"]},{"type":"character","attributes":{},"value":["Analyse of how the AI can help diagnose Alzheimer.\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","url"]}},"value":[{"type":"character","attributes":{},"value":["Plasman Héloïse"]},{"type":"character","attributes":{},"value":["Heloise04.github.io/Heloise_blog/"]}]}]},{"type":"character","attributes":{},"value":["10-24-2020"]},{"type":"character","attributes":{},"value":["AI_Alzheimer.bib"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[false]}]}]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"character","attributes":{},"value":["biblio/AI_Alzheimer.bib","images/cookietheft.jpg","mon-article_files/bowser-1.9.3/bowser.min.js","mon-article_files/distill-2.2.21/template.v2.js","mon-article_files/jquery-1.11.3/jquery.min.js","mon-article_files/webcomponents-2.0.0/webcomponents.js"]}
+  {"type":"character","attributes":{},"value":["AI_Alzheimer.bib","images/cookietheft.jpg","mon-article_files/bowser-1.9.3/bowser.min.js","mon-article_files/distill-2.2.21/template.v2.js","mon-article_files/jquery-1.11.3/jquery.min.js","mon-article_files/webcomponents-2.0.0/webcomponents.js"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
   <!--/radix_placeholder_navigation_in_header-->
@@ -963,7 +965,7 @@
 </div>
 
 <div class="d-article">
-<p><img src="images/cookietheft.jpg" alt="The AI analysed responses to what is happening in this picture:two children stealing cookies behind their mother’s back" /> This post is an analysis of Analysis of <em>The AI that spots Alzheimer’s from cookie drawingt</em></p>
+<p><img src="images/cookietheft.jpg" alt="The AI analysed responses to what is happening in this picture:two children stealing cookies behind their mother’s back" /> This post is an analysis of Analysis of <em>The AI that spots Alzheimer’s from cookie drawingt</em> <span class="citation" data-cites="2020AI">(Wakefield <a href="#ref-2020AI" role="doc-biblioref">2020</a>)</span></p>
 <h2 id="summary">Summary</h2>
 <p>The AI (artificial intelligence) can help to diagnose early the Alzheimer, about 7 years before the symptoms really appear.</p>
 <p>This method involves analyzing the way people describe a scene that is drawn like the one above. Depending on how people express themselves for example if they change slightly their language, if they do grammar errors or change their tenses structures, we can diagnose whether people will suffer from Alzheimer.</p>
@@ -1017,7 +1019,11 @@
 <p>It’s a great thing to found out up to 7 years before developing the disease The AI will not give the diagnosis but will help the doctor</p>
 <h4 id="remaining-questions"><em>Remaining questions</em></h4>
 <p>/</p>
-<h1 id="references">References</h1>
+<div id="refs" class="references" role="doc-bibliography">
+<div id="ref-2020AI">
+<p>Wakefield, Jane. 2020. “The Ai That Spots Alzheimer’s from Cookie Drawin.” BBC News. <a href="https://www.bbc.com/news/science-environment-31111843">https://www.bbc.com/news/science-environment-31111843</a>.</p>
+</div>
+</div>
 <!--radix_placeholder_article_footer-->
 <!--/radix_placeholder_article_footer-->
 </div>
@@ -1030,6 +1036,16 @@
 <!--/radix_placeholder_site_after_body-->
 <!--radix_placeholder_appendices-->
 <div class="appendix-bottom"></div>
+<script id="distill-bibliography" type="text/bibtex">
+@MISC {2020AI,
+    author       = "Jane Wakefield",
+    title        = "The AI that spots Alzheimer's from cookie drawin",
+    url = "https://www.bbc.com/news/science-environment-31111843",
+    howpublished = "BBC News",
+    month        = "oct",
+    year         = "2020"
+}
+</script>
 <!--/radix_placeholder_appendices-->
 <!--radix_placeholder_navigation_after_body-->
 <!--/radix_placeholder_navigation_after_body-->
