--- a/_posts/2020-10-24-mon-article 1/mon-article-1.html
+++ b/_posts/2020-10-24-mon-article 1/mon-article-1.html
@@ -966,6 +966,9 @@
 
 <div class="d-article">
 <p><img src="images/cookietheft.jpg" alt="The AI analysed responses to what is happening in this picture:two children stealing cookies behind their mother’s back" /> This post is an analysis of Analysis of <em>The AI that spots Alzheimer’s from cookie drawingt</em> <span class="citation" data-cites="2020AI">(Wakefield <a href="#ref-2020AI" role="doc-biblioref">2020</a>)</span></p>
+<p><em>Source of the article</em> : BBC News</p>
+<p><em>Word count</em> : 607</p>
+<p><em>URL</em> : <a href="https://www.bbc.com/news/technology-54538228" class="uri">https://www.bbc.com/news/technology-54538228</a></p>
 <h2 id="summary">Summary</h2>
 <p>The AI (artificial intelligence) can help to diagnose early the Alzheimer, about 7 years before the symptoms really appear.</p>
 <p>This method involves analyzing the way people describe a scene that is drawn like the one above. Depending on how people express themselves for example if they change slightly their language, if they do grammar errors or change their tenses structures, we can diagnose whether people will suffer from Alzheimer.</p>
