--- a/_posts/2020-11-27-introduction/introduction.html
+++ b/_posts/2020-11-27-introduction/introduction.html
@@ -975,6 +975,8 @@
 <li>nanotechnologies (which affect many more fields than one might think)</li>
 <li>Always more feats in medicine and health</li>
 <li>Everyday habits (batteries, electricity,…)</li>
+<li>Environnement<br />
+</li>
 <li>…</li>
 </ul>
 <!--radix_placeholder_article_footer-->
