--- a/_posts/2020-11-03-mon-article-4/mon-article-4.html
+++ b/_posts/2020-11-03-mon-article-4/mon-article-4.html
@@ -963,8 +963,11 @@
 </div>
 
 <div class="d-article">
-<p><em>Source of the article</em> : BBC News <em>Word count</em> : 836 <em>URL</em> : <a href="https://www.bbc.com/news/technology-55222499" class="uri">https://www.bbc.com/news/technology-55222499</a></p>
+<p><em>Source of the article</em> : BBC News</p>
+<p><em>Word count</em> : 836</p>
+<p><em>URL</em> : <a href="https://www.bbc.com/news/technology-55222499" class="uri">https://www.bbc.com/news/technology-55222499</a></p>
 <h2 id="summary">Summary</h2>
+<p>In England, Commissioner Anne Longfield is fighting against encrypted messaging such as those offered by the soccial media Facebook. Because those are a danger for the children who use it and then talk to strangers and can be abused. In addition, the danger of this way of communicating is that it’s a type of encrypted communication that means that you can’t directly access to the conversation except if your are the sender or the receiver. That means that the police can’t rapidly access to these informations when they would like to open an investigation. We should then penalize companies that don’t want to collaborate with investigators. But it poses a problem if we talk about deleting encrypted messaging then it would be the privacy of everyone who would be in danger and there would be no more privacy. It will therefore be necessary to find a compromise between the two.</p>
 <h2 id="vocabulary">Vocabulary:</h2>
 <table>
 <colgroup>
@@ -1005,7 +1008,6 @@
 </tbody>
 </table>
 <h2 id="analysis-table-about-the-study">Analysis table about the study</h2>
-<p>In England, Commissioner Anne Longfield is fighting against encrypted messaging such as those offered by the soccial media Facebook. Because those are a danger for the children who use it and then talk to strangers and can be abused. In addition, the danger of this way of communicating is that it’s a type of encrypted communication that means that you can’t directly access to the conversation except if your are the sender or the receiver. That means that the police can’t rapidly access to these informations when they would like to open an investigation. We should then penalize companies that don’t want to collaborate with investigators. But it poses a problem if we talk about deleting encrypted messaging then it would be the privacy of everyone who would be in danger and there would be no more privacy. It will therefore be necessary to find a compromise between the two.</p>
 <h4 id="researchers"><em>Researchers ?</em></h4>
 <p><em>Anne Longfield </em>A spokesman for the Department for Digital, Culture, Media and Sport <em>Rory cella-Jones, technology correspondent </em>Digital rights organisations : The Open Rights Group and The Electronic Frontier Foundation</p>
 <h4 id="published-in-when-if-mentioned"><em>Published in ? when (if mentioned) ?</em></h4>
