--- a/_posts/2020-10-24-mon-article 1/mon-article-1.html
+++ b/_posts/2020-10-24-mon-article 1/mon-article-1.html
@@ -46,7 +46,7 @@
   <!--radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","bibliography","output"]}},"value":[{"type":"character","attributes":{},"value":["Article 1 : The AI that spots Alzheimer's from cookie drawing"]},{"type":"character","attributes":{},"value":["Analyse of how the AI can help diagnose Alzheimer.\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","url"]}},"value":[{"type":"character","attributes":{},"value":["Plasman Héloïse"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["http://Heloise04.github.io/Heloise_blog/"]}},"value":[{"type":"NULL"}]}]}]},{"type":"character","attributes":{},"value":["10-24-2020"]},{"type":"character","attributes":{},"value":["AI_Alzheimer.bib"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[false]}]}]}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","categories","bibliography","output"]}},"value":[{"type":"character","attributes":{},"value":["Article 1 : The AI that spots Alzheimer's from cookie drawing"]},{"type":"character","attributes":{},"value":["Analyse of how the AI can help diagnose Alzheimer.\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","url"]}},"value":[{"type":"character","attributes":{},"value":["Plasman Héloïse"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["http://Heloise04.github.io/Heloise_blog/"]}},"value":[{"type":"NULL"}]}]}]},{"type":"character","attributes":{},"value":["10-24-2020"]},{"type":"character","attributes":{},"value":["English for Science"]},{"type":"character","attributes":{},"value":["AI_Alzheimer.bib"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[false]}]}]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   
@@ -1010,7 +1010,7 @@
 <li>Ajay Royyuru, IBM’s vice-president of Healthcare Research</li>
 </ul>
 <h4 id="published-in-when-if-mentioned"><em>Published in ? when (if mentioned) ?</em></h4>
-<p>The Lancet eClinicalMedicine journal 23th October 2020</p>
+<p>The Lancet eClinicalMedicine journal 23th of October 2020</p>
 <h4 id="general-topic"><em>General topic</em></h4>
 <p>AI and Alzheimer</p>
 <h4 id="procedure-what-was-examined"><em>Procedure/ what was examined</em></h4>
