--- a/_posts/introduction/introduction.html
+++ b/_posts/introduction/introduction.html
@@ -964,7 +964,7 @@
 
 <div class="d-article">
 <h1 id="introduction">Introduction</h1>
-<p>In the English course and in collaboration with the SDD course given in the 2^nd Bachelor of Biology, we were asked to choose a scientific, mathematical or computer science theme that we like and to create a blog on it.</p>
+<p>In the English course and in collaboration with the SDD course given in the 2nd Bachelor of Biology, we were asked to choose a scientific, mathematical or computer science theme that we like and to create a blog on it.</p>
 <p>In this context, I chose as my thesis “Humans and Technology, Is It a Good or a Bad Thing?”. This topic seemed topical to me because we are in a society, an era where everything seems to go faster and faster, more and more computerized, where technology is omnipresent and seems impossible to live without. The question to be asked therefore is “How far technology can go and especially where is the limit between benefits and disadvantages or even danger?”.</p>
 <p><strong><em>Because in the end what really is technology?</em></strong></p>
 <p>According to the Larousse definition, technology is : <em>The study or the set of tools, machines, processes, knowledge and methods used in a certain technical field.</em> Which means that technology is found in all kinds of fields, in our everyday life and has effects at all levels of our lifestyle.</p>
