--- a/_posts/mon-article3/mon-article-3.html
+++ b/_posts/mon-article3/mon-article-3.html
@@ -969,29 +969,34 @@
 <h2 id="summary">Summary</h2>
 <p>5G is above all a question of competition between the major smartphone industries and an evolution that will be imposed over the years to the entire population, as the norm. Because in the end, we mainly talk about 5G for its speed but after studies we see that this is the case only in certain countries (South Korea).</p>
 <h2 id="vocabulary">Vocabulary:</h2>
-<table>
+<table style="width:100%;">
 <colgroup>
-<col style="width: 38%" />
-<col style="width: 61%" />
+<col style="width: 28%" />
+<col style="width: 46%" />
+<col style="width: 24%" />
 </colgroup>
 <thead>
 <tr class="header">
 <th style="text-align: center;">Words from the text</th>
 <th style="text-align: center;">Synonym / explanation in English</th>
+<th style="text-align: center;">French translation</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
 <td style="text-align: center;">embrace</td>
-<td style="text-align: center;">to accept something enthusiastically</td>
+<td style="text-align: center;">To accept something enthusiastically</td>
+<td style="text-align: center;">embrasser, adopter</td>
 </tr>
 <tr class="even">
 <td style="text-align: center;">towards</td>
-<td style="text-align: center;">in the direction of, or closer to someone or something</td>
+<td style="text-align: center;">In the direction of, or closer to someone or something</td>
+<td style="text-align: center;">envers</td>
 </tr>
 <tr class="odd">
 <td style="text-align: center;">overhyped</td>
-<td style="text-align: center;">to advertise or praise something more than it deserves in newspapers, on television, online, etc, in order to make people excited about it and want to buy, try it, invest in it, etc</td>
+<td style="text-align: center;">To advertise or praise something more than it deserves in newspapers, on television, online, …, in order to make people excited about it and want to buy, try it, invest in it,…</td>
+<td style="text-align: center;">surpassé</td>
 </tr>
 </tbody>
 </table>
@@ -1011,7 +1016,7 @@
 <h4 id="procedure-what-was-examined"><em>Procedure/ what was examined</em></h4>
 <p>collects data from mobile users all over the World</p>
 <h4 id="conclusion-discovery"><em>Conclusion / discovery</em></h4>
-<p>5G is more develop, usefull in South Korea or Saudi Arabia 5G is an evolution, rather than a revolution. But mobile industry and governments have decided that it is vital to our prosperity and security, so you can expect to hear plenty more about it over the coming years.</p>
+<p>5G is more develop, useful in South Korea or Saudi Arabia 5G is an evolution, rather than a revolution. But mobile industry and governments have decided that it is vital to our prosperity and security, so you can expect to hear plenty more about it over the coming years.</p>
 <h4 id="remaining-questions"><em>Remaining questions</em></h4>
 <p>/</p>
 <!--radix_placeholder_article_footer-->
