--- a/_posts/conclusion/conclusion.html
+++ b/_posts/conclusion/conclusion.html
@@ -49,7 +49,7 @@
   <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"NULL"}
+  {"type":"character","attributes":{},"value":["conclusion_files/bowser-1.9.3/bowser.min.js","conclusion_files/distill-2.2.21/template.v2.js","conclusion_files/jquery-1.11.3/jquery.min.js","conclusion_files/webcomponents-2.0.0/webcomponents.js"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
   <!--/radix_placeholder_navigation_in_header-->
@@ -927,10 +927,10 @@
   </script>
   
   <!--/radix_placeholder_distill-->
-  <script src="mon-article_files/jquery-1.11.3/jquery.min.js"></script>
-  <script src="mon-article_files/bowser-1.9.3/bowser.min.js"></script>
-  <script src="mon-article_files/webcomponents-2.0.0/webcomponents.js"></script>
-  <script src="mon-article_files/distill-2.2.21/template.v2.js"></script>
+  <script src="conclusion_files/jquery-1.11.3/jquery.min.js"></script>
+  <script src="conclusion_files/bowser-1.9.3/bowser.min.js"></script>
+  <script src="conclusion_files/webcomponents-2.0.0/webcomponents.js"></script>
+  <script src="conclusion_files/distill-2.2.21/template.v2.js"></script>
   <!--radix_placeholder_site_in_header-->
   <!--/radix_placeholder_site_in_header-->
 
