--- a/_posts/portfolio1/Portefolio-1.html
+++ b/_posts/portfolio1/Portefolio-1.html
@@ -46,7 +46,7 @@
   <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"character","attributes":{},"value":["Portefolio-1_files/bowser-1.9.3/bowser.min.js","Portefolio-1_files/distill-2.2.21/template.v2.js","Portefolio-1_files/jquery-1.11.3/jquery.min.js","Portefolio-1_files/webcomponents-2.0.0/webcomponents.js"]}
+  {"type":"NULL"}
   </script>
   <!--radix_placeholder_navigation_in_header-->
   <!--/radix_placeholder_navigation_in_header-->
