--- a/_posts/mon-article1/mon-article-1.html
+++ b/_posts/mon-article1/mon-article-1.html
@@ -972,8 +972,37 @@
 <h2 id="summary">Summary</h2>
 <p>The AI (artificial intelligence) can help to diagnose early the Alzheimer, about 7 years before the symptoms really appear. This method involves analysing the way people describe a scene that is drawn like the one above. Depending on how people express themselves for example if they change slightly their language, if they do grammar errors or change their tenses structures, we can diagnose whether people will suffer from Alzheimer. This is really important for treatment, because more we diagnose it quickly, better the treatment and the person’s comfort of life will be. But the actual diagnosis will always be taken by the doctor and the AI will never decide.</p>
 <h2 id="vocabulary">Vocabulary:</h2>
-<div class="line-block">Words from the text | Synonym / explanation in English | French translation |</div>
-<p>|:——————-: |:——————————–: |:——- ———: | |samples|Small number or amount of sb/sth that is looked at, tested, examined,…. To find out what the rest is like|échantillons| |excerpts|A short piece taken from a book, film, piece of music, …|extraits| |acknowledged|To accept or admit that sth is true or exist|accuser réception|</p>
+<table style="width:100%;">
+<colgroup>
+<col style="width: 28%" />
+<col style="width: 46%" />
+<col style="width: 24%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th style="text-align: center;">Words from the text</th>
+<th style="text-align: center;">Synonym / explanation in English</th>
+<th style="text-align: center;">French translation</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: center;">samples</td>
+<td style="text-align: center;">Small number or amount of sb/sth that is looked at, tested, examined,…. To find out what the rest is like</td>
+<td style="text-align: center;">échantillons</td>
+</tr>
+<tr class="even">
+<td style="text-align: center;">excerpts</td>
+<td style="text-align: center;">A short piece taken from a book, film, piece of music,…</td>
+<td style="text-align: center;">extraits</td>
+</tr>
+<tr class="odd">
+<td style="text-align: center;">acknowledged</td>
+<td style="text-align: center;">To accept or admit that sth is true or exist</td>
+<td style="text-align: center;">accuser réception</td>
+</tr>
+</tbody>
+</table>
 <h2 id="analysis-table-about-the-study">Analysis table about the study</h2>
 <h4 id="researchers"><em>Researchers ?</em></h4>
 <ul>
